Fixing the issue where the geocoder api is timing out. This is becuase more than 2500 requests are being made and the free limit of the geocoder api only allows 2500 calls per day from an ip address. The location check needs to be moved to the client side to fix this issue

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,6 +48,8 @@
 							  </select>
 							  <% if session[:city].nil? %>
 							  	<h4 class="selected_city">Select a City</h4>
+							  <% elsif session[:city].empty? %>
+							  	<h4 class="selected_city">Select a City</h4>
 							  <% else %>
 							  	<h4 class="selected_city">Current City: <%= session[:city] %> </h4>
 							  <% end %>
