--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -148,9 +148,13 @@
     <p>There are no events in your city right now. Leave your email address and we will get back to you once we start conducting events in your city</p>
     
     <%= form_for(@new_city_notification, :remote => true) do |f| %>
-        <div class="field">
-            <%= f.hidden_field :city, :value => request.location.city %>
-        </div>
+        <% if  request.location.city.nil? or request.location.city.empty?%>
+            
+        <% else %>
+            <div class="field">
+                <%= f.hidden_field :city, :value => request.location.city %>
+            </div>    
+        <% end %>
         <div class="field">
             <%= f.label :email %>
             <%= f.text_field :email, :placeholder => "Enter your email address" %>
