--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -148,7 +148,7 @@
     <p>There are no events in your city right now. Leave your email address and we will get back to you once we start conducting events in your city</p>
     
     <%= form_for(@new_city_notification, :remote => true) do |f| %>
-        <% if  request.location.city.nil?%>
+        <% if  request.location.nil? %>
             
         <% else %>
             <div class="field">
