Fixed the issue in the home controller in case the request.location is nil

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	
-	<% if (yield :title).empty?%>
+	<% if (yield :title).blank? %>
 		<% if session[:city].empty? %>
 			<title>Things to do and people to meetup up with</title>	
 		<% else %>
