--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -17,7 +17,7 @@
                         <% if event.event_image.blank? %>
                             <%= image_tag restaurant.photo_url.to_s %>
                         <% else %>
-                            <%= image_tag event.event_image_url.to_s %>
+                            <%= image_tag event.event_image_url(:list).to_s %>
                         <% end %>
                         <% if event.status == 'closed' || event.status == "full" %>
                             <div class="closed">
