--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,23 @@
+<% content_for :javascript do %>
+	<%= javascript_include_tag "bootstrap-multiselect" %>
+<% end %>
+<script>
+	$('.dropdown input, .dropdown label').click(function (event) {
+	    event.stopPropagation();
+	});
+</script>
+<script>
+	$(document).ready(function() {
+		$('#user_interests_attributes_0_name').multiselect();
+	});
+</script>
 <div class="container">
 	<div class="row-fluid">
 		<div class="span6 offset3">
 			<div class="login">
 				<h2>Sign up</h2>
 
+				<% resource.interests.build %>
 				<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
 				  <%= devise_error_messages! %>
 
@@ -13,6 +27,21 @@
 				  <div>
 				  	<%= f.label :city %>
 				  	<%= f.text_field :city %>
+				  </div>
+
+				  <div>
+				  	<%= f.label :interests %>
+				  	<%# Todo: Fix the issue where there is an empty {} in the select option below  %>
+				  	<%= f.fields_for :interests do |builder| %>
+					  <%# builder.collection_select :user, :interest, :id, :name, multiple: true%>
+					  <%# builder.select("user", "interests", [["Foodie","Foodie"],["Entrepreneurship","Entrepreneurship"],["Photography","Photography"],["Technology","Technology"]],{:multiple=>"multiple", :size=>5}) %>
+					  <% optionsHash = { "Foodie" => "Foodie","Entrepreneurship" => "Entrepreneurship","Photography" => "Photography", "Technology" => "Technology"} %>
+					  <%= builder.select(:name, optionsHash,{},{:multiple=>"multiple", :size=>5}) %>
+					  <%# select_tag(:name, options_for_select([["Foodie","Foodie"],["Entrepreneurship","Entrepreneurship"],["Photography","Photography"],["Technology","Technology"]])) %>
+					<% end %>
+
+			  		<%# select("user", "interests", [["Foodie","Foodie"],["Entrepreneurship","Entrepreneurship"],["Photography","Photography"],["Technology","Technology"]],{},{:multiple=>"multiple", :size=>5}) %>
+				  	
 				  </div>
 
 				  <div><%= f.label :email %>
