Added the number of events a user has attended to the admin/user page

--- a/app/views/admin/user/index.html.erb
+++ b/app/views/admin/user/index.html.erb
@@ -4,10 +4,16 @@
 			<% @user_list.each do |city,users| %>
 			<h2><%= city %></h2>
 				<table class="table table-striped">
+					<tr>
+						<th>Name</th>
+						<th>Email</th>
+						<th>Events Attended</th>
+					</tr>
 					<% users.each do |user| %>
 					  	<tr>
 					  		<td><%= user.name %></td>
 					  		<td><%= user.email %></td>
+					  		<td><%= user.attendees.count %></td>
 					  	</tr>
 				  	<% end %>
 				</table>
