Added the number of seats to the admin dashboard view attendee. Deleted dashboards

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -166,7 +166,7 @@ $(function () {
                                     <% attendees.each do |attedee| %>
                                         <% user = User.find(attedee.user_id) %>
                                         <li>
-                                            <%= user.name %> - <%= attedee.phone_number %>
+                                            <%= user.name %> - Phone number: <%= attedee.phone_number %> - Seats: <%= attedee.seats %> 
                                         </li>
                                     <% end %>
                                     
