Added code to resize all the images to fit a standard height and width

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -14,9 +14,9 @@
     <div class="span6">
       <div class="eventDetailsImage">
         <% if @event.event_image.blank? %>
-            <%= image_tag restaurant.photo_url.to_s %>
+            <%= image_tag restaurant.photo_url(:extra_large_scaled).to_s %>
         <% else %>
-            <%= image_tag @event.event_image_url.to_s %>
+            <%= image_tag @event.event_image_url(:extra_large_scaled).to_s %>
         <% end %>
         <% if @event.status == 'closed' || @event.status == 'full' %>
             <div class="closed">
