Added code to show line breaks in the event description

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -57,7 +57,7 @@
       
       
       <p>
-        <%= @event.event_description %>      
+        <%= simple_format(@event.event_description) %>      
       </p>
 
       <% if @event.status == "closed" || @event.status == "full" %>
