Added simple format to the code for showing the event desciption with line breaks

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -73,9 +73,9 @@
                     <% end %>
 
                         <% if event.event_image.blank? %>
-                            <%= image_tag restaurant.photo_url.to_s %>
+                            <%= image_tag restaurant.photo_url(:large_scaled).to_s %>
                         <% else %>
-                            <%= image_tag event.event_image_url.to_s %>
+                            <%= image_tag event.event_image_url(:large_scaled).to_s %>
                         <% end %>
 
                         <% if event.status == 'closed' || event.status == "full" %>
