--- a/app/views/admin/invites/index.html.erb
+++ b/app/views/admin/invites/index.html.erb
@@ -1,2 +1,48 @@
-<h1>Admin::Invites#index</h1>
-<p>Find me in app/views/admin/invites/index.html.erb</p>
+<div class="container">
+	<div class="row-fluid">
+		<div class="span12">
+			<h2>User invites</h2>
+			<table class="table table-striped">
+				<tr>
+					<th>Name</th>
+					<th>Invites Sent</th>
+					<th>Shared on Facebook</th>
+				</tr>
+				<% @invites.each do |invite| %>
+					<tr>
+						<% user = User.find(invite.user_id) %>
+						<td><%= user.name %></td>
+						<td><%= invite.email_invites %> </td>
+						<td>
+							<% if invite.facebook_share.nil? %>
+								No
+							<% else %>
+								Yes
+							<% end %>
+						</td>
+					</tr>
+				<% end %>
+			</table>
+		</div>
+	</div>
+</div>
+
+<div class="container">
+	<div class="row-fluid">
+		<div class="span12">
+			<h2>People that want to stay informed about cities</h2>
+			<table class="table table-striped">
+				<tr>
+					<th>Email</th>
+					<th>City</th>
+				</tr>
+				<% @new_city_added_notifications.each do |notification| %>
+					<tr>
+						<td><%= notification.email %></td>
+						<td><%= notification.city %> </td>
+					</tr>
+				<% end %>
+			</table>
+		</div>
+	</div>
+</div>
