--- a/app/views/layouts/admin/admin.html.erb
+++ b/app/views/layouts/admin/admin.html.erb
@@ -29,6 +29,7 @@
 						<li><a href="/admin">Dashboard</a></li>
 						<li><a href="/admin/users">Users</a></li>
 						<li><a href="/admin/events">Events</a></li>
+						<li><a href="/admin/invites">Invites</a></li>
 					</ul>
 				</div>
 				<div class="span4 user_info">
