--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,16 @@
 
 </head>
 <body <%= yield :body_class %>>
-
+	<!-- FB start -->
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
+	<!-- FB start -->
 	<div class="topBar">
 		<div class="navbar">
     		<div class="navbar-inner">
@@ -170,6 +179,12 @@
 	  })();
 
 	</script>
-	
+	<div class="container">
+		<div class="row-fluid">
+			<div class="span12">
+				<div class="fb-like" data-href="http://developers.facebook.com/docs/reference/plugins/like" data-send="true" data-width="450" data-show-faces="true"></div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
