Added links for the event page and the new event page in the admin page

--- a/app/assets/stylesheets/admin/admin.css.scss
+++ b/app/assets/stylesheets/admin/admin.css.scss
@@ -169,6 +169,10 @@ a:hover
   -moz-border-radius: 0 6px 6px 0;
   border-radius: 0 6px 6px 0; 
 }
+.createEventButton
+{
+	margin-top: 20px;
+}
 /******************************************************************************/
 /* General elements */
 /******************************************************************************/
