--- a/app/views/admin/event/index.html.erb
+++ b/app/views/admin/event/index.html.erb
@@ -1,6 +1,14 @@
 <div class="container">
 	<div class="row-fluid">
 		<div class="span12">
+			<%= link_to "Create Event", :new_admin_event, :class => "btn btn-large btn-primary createEventButton" %>
+		</div>
+	</div>
+</div>
+
+<div class="container">
+	<div class="row-fluid">
+		<div class="span12">
 			<% @event_list.each do |city,events| %>
 			<h2><%= city %></h2>
 				<table class="table table-striped">
