--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -28,6 +28,29 @@
 	background: #fff;
 }
 /**********************************************************************/
+/* Header style */
+/**********************************************************************/
+.header{
+color:#DD4124;
+background-color:white;
+}
+.header:after 
+{
+	content: " ";
+    display:block;
+    position: relative;
+	top:0px;left:0px;
+    width:100%;
+    height:36px;
+    background: linear-gradient(#ffffff 0%, transparent 0%), linear-gradient(135deg, #272220 33.33%, transparent 33.33%) 0 0%, #272220 linear-gradient(45deg, #272220 33.33%, #ffffff 33.33%) 0 0%;
+    background: -webkit-linear-gradient(#ffffff 0%, transparent 0%), -webkit-linear-gradient(135deg, #272220 33.33%, transparent 33.33%) 0 0%, #272220 -webkit-linear-gradient(45deg, #272220 33.33%, #ffffff 33.33%) 0 0%;
+    background: -o-linear-gradient(#ffffff 0%, transparent 0%), -o-linear-gradient(135deg, #272220 33.33%, transparent 33.33%) 0 0%, #272220 -o-linear-gradient(45deg, #272220 33.33%, #ffffff 33.33%) 0 0%;
+    background: -moz-linear-gradient(#ffffff 0%, transparent 0%), -moz-linear-gradient(135deg, #272220 33.33%, transparent 33.33%) 0 0%, #272220 -moz-linear-gradient(45deg, #272220 33.33%, #ffffff 33.33%) 0 0%;
+    background-repeat: repeat-x;
+    background-size: 0px 100%, 9px 27px, 9px 27px;
+}
+
+/**********************************************************************/
 /* Login style */
 /**********************************************************************/
 .loginDetails
