Added the javascript for the city select and added a link to the community events

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,7 +28,7 @@
                 </p>
 
                 <%= link_to 'Create a private event', new_event_path, :class => "css3button topMargin" %> 
-                or <a href="#"><strong>Meet new people</strong></a>
+                or <a href="#communityEventsHeader"><strong>Meet new people</strong></a>
             </div>
 
         </div>
@@ -45,7 +45,7 @@
 <div class="container">
     <div class="row-fluid">
         <div class="span12">
-            <h1>Community events</h1>
+            <h1 id="communityEventsHeader">Community events</h1>
         </div>
     </div>
 </div>
