--- a/app/views/admin/event/_form.html.erb
+++ b/app/views/admin/event/_form.html.erb
@@ -25,7 +25,7 @@
       <br/>
       <div class="field">
         <%= f.label :city %>
-        <%= select_tag(:city, options_for_select([['Select a city',''],['Hyderabad','Hyderabad'], ['Mumbai','Mumbai'], ['Ahmedabad', 'Ahmedabad'], ['Bangalore', 'Bangalore']])) %>
+        <%= select_tag(:city, options_for_select([['Select a city',''],['Hyderabad','Hyderabad'], ['Pune','Pune'], ['Ahmedabad', 'Ahmedabad'], ['Bangalore', 'Bangalore']])) %>
       </div>
       <div class="field">
         <%= f.label :event_name %>
