--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -307,6 +307,7 @@ box-shadow:         0px 3px 6px rgba(50, 50, 50, 0.5);
 {
 	background: #272220;
 	color: #fff;
+      min-height: 450px;
 }
 .subHeader a
 {
