Added the restaurant creation, edit and update to the admin page. Added the list of attendees for all the previous events

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -176,6 +176,7 @@ $(function () {
                                 <button class="btn btn-large" data-dismiss="modal" aria-hidden="true">Close</button>
                               </div>
                             </div>
+                            <!-- End Modal -->
                             <!--<a href="#" class="btn btn-primary btn-small" >View Attendees</a>-->
                             
                         </div>
