--- a/app/views/layouts/admin/admin.html.erb
+++ b/app/views/layouts/admin/admin.html.erb
@@ -29,8 +29,10 @@
 					<ul>
 						<li><a href="/admin">Dashboard</a></li>
 						<li><a href="/admin/users">Users</a></li>
+						<li><a href="/admin/restaurant">Restaurants</a></li>
 						<li><a href="/admin/event">Events</a></li>
 						<li><a href="/admin/invites">Invites</a></li>
+
 					</ul>
 				</div>
 				<div class="span4 user_info">
