--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -106,6 +106,11 @@
                   <li><a href="Bangalore">Bangalore</a></li>
                   <li><a href="Pune">Pune</a></li>
                   <li><a href="Ahmedabad">Ahmedabad</a></li>
+                  <li><a href="Kuala Lumpur">Kuala Lumpur</a></li>
+                  <li><a href="Selangor">Selangor</a></li>
+                  <li><a href="Perak">Perak</a></li>
+                  <li><a href="Penang">Penang</a></li>
+                  
                 </ul>
               </div>
             </div>
